<?xml version="1.0"?>
<package>
  <name>steering_module_description</name>
  <version>1.1.2</version>
  <description> URDF description of the lifting </description>

  <url type="website">http://ros.org/wiki/ir100_description</url>
  <url type="repository">https://github.com</url>
  <url type="bugtracker">https://github.com</url>

  <author email="xuehaowen@sensorobots.net">sunjiayuan</author>

  <maintainer email="xuehaowen@sensorobots.net">sunjiayuan</maintainer>
 
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  
</package>



